--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.32.1
 pydantic==2.10.3
 motor==3.6.0
 python-jose==3.3.0
-passlib[bcrypt]==1.7.4
+passlib[argon2]==1.7.4
 python-multipart==0.0.20
 email-validator==2.2.0
 httpx==0.28.1
